# Book-Bot

./: .gitignore  README.md  pyproject.toml
src/: ai_helper.py  local_database_postgres.py  local_database_sqlite.py  local_file_namer.py  main.py  open_library.py  open_library_api.py  open_library_extractions.py
